--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+patricia_tree = "0.9.0"
+anyhow = "1.0.98"
+thiserror = "2.0.12"
+chrono = {version = "0.4.41", features = ["alloc"]}
+uuid = {version = "1.17.0", features = ["v4"]}
+sha2 = "0.10.9"
+rs_merkle = "1.5.0"
+hex = "0.4.3"
