--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ hex = "0.4.3"
 bincode = {version = "2.0.1", features = ["std","serde","derive"]}
 serde = { version = "1.0.219", features = ["derive"] }
 clap = {version = "4.5.40",features = ["derive"]}
+
+pest = "2.8.1"
+pest_derive = "2.8.1"
