--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ uuid = {version = "1.18.1", features = ["v4","serde"]}
 sha2 = "0.10.9"
 rs_merkle = "1.5.0"
 hex = "0.4.3"
-bincode = {version = "2.0.1", features = ["std","serde","derive"]}
+bincode = {version = "2.0.1", features = ["std","serde","derive","alloc"]}
 serde = { version = "1.0.228", features = ["derive"] }
 clap = {version = "4.5.48",features = ["derive","color","suggestions","error-context"]}
 
